@@ -13,7 +13,6 @@ import java.time.LocalTime;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class Store {
     private final int storeId;
@@ -243,6 +242,11 @@ public class Store {
         productDiscountPolicyMap.put(discount, new ArrayList<>());
     }
 
+    public void removeDiscount(int discountId) throws Exception {
+        Discount d = findDiscount(discountId);
+        productDiscountPolicyMap.remove(d);
+    }
+
     private Discount findDiscount(int discountId) throws Exception {
         Discount discount = productDiscountPolicyMap.keySet().stream().filter(d -> d.getDiscountId() == discountId).findFirst().orElse(null);
         if (discount == null) {
@@ -258,9 +262,9 @@ public class Store {
         productDiscountPolicyMap.get(d).add(new MinQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), minQuantity, allowNone));
     }
 
-    public void addMaxQuantityDiscountPolicy(int discountId, int productId, int maxQuantity, boolean allowNone) throws Exception {
+    public void addMaxQuantityDiscountPolicy(int discountId, int productId, int maxQuantity) throws Exception {
         Discount d = findDiscount(discountId);
-        productDiscountPolicyMap.get(d).add(new MaxQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), maxQuantity, allowNone));
+        productDiscountPolicyMap.get(d).add(new MaxQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), maxQuantity));
     }
 
     public void addMinBagTotalDiscountPolicy(int discountId, double minTotal) throws Exception {
@@ -282,16 +286,15 @@ public class Store {
                 baseDiscountPolicies.add(new DiscountPolicyOperation(discountPolicyCounter++, found_1, operator, found_2));
                 baseDiscountPolicies.remove(found_1);
                 baseDiscountPolicies.remove(found_2);
+                return;
             }
         }
         if (found_1 == null) {
             logger.error("couldn't find discount policy of id" + policyId1);
             throw new Exception("couldn't find discount policy of id" + policyId1);
         }
-        if (found_2 == null) {
-            logger.error("couldn't find discount policy of id" + policyId2);
-            throw new Exception("couldn't find discount policy of id" + policyId2);
-        }
+        logger.error("couldn't find discount policy of id" + policyId2);
+        throw new Exception("couldn't find discount policy of id" + policyId2);
     }
 
     public void removeDiscountPolicy(int policyId) throws Exception {
@@ -302,7 +305,7 @@ public class Store {
     }
 
     private BaseDiscountPolicy findDiscountPolicy(int policyId) throws Exception {
-        BaseDiscountPolicy bp = productDiscountPolicyMap.values().stream().flatMap(Collection::stream).collect(Collectors.toList()).stream().filter(p -> p.getPolicyId() == policyId).findFirst().orElse(null);
+        BaseDiscountPolicy bp = productDiscountPolicyMap.values().stream().flatMap(Collection::stream).toList().stream().filter(p -> p.getPolicyId() == policyId).findFirst().orElse(null);
         if (bp == null) {
             logger.error("couldn't find discount policy of id" + policyId);
             throw new Exception("couldn't find discount policy of id" + policyId);
